add missing return statments in post controller & expressive upload message in profile edit

--- a/public/views/editProfile.html
+++ b/public/views/editProfile.html
@@ -1,156 +1,158 @@
 <link rel="stylesheet" href="../css/editProfile.css">
 
 <div ng-if="!token">
-  <style>
-    body{
-      background-image: none;
-    }
-  </style>
-  <div class="container not-logged-in">
-    <h2>I see you're not logged in.</h2>
-    <hr>
-    <p>Click here to login</p>
-    <a class="btn btn-success btn-block" href="/login">Login</a>
-    <hr>
-    <p>Perhaps you don't have an account?</p>
-    <a class ="btn btn-primary btn-block" href="/register">Register now | It's free!</a>
-    <div style="text-align:center">
-      <img src="../images/login-pic-2.png" width="250px">
+    <style>
+        body {
+            background-image: none;
+        }
+    </style>
+    <div class="container not-logged-in">
+        <h2>I see you're not logged in.</h2>
+        <hr>
+        <p>Click here to login</p>
+        <a class="btn btn-success btn-block" href="/login">Login</a>
+        <hr>
+        <p>Perhaps you don't have an account?</p>
+        <a class="btn btn-primary btn-block" href="/register">Register now | It's free!</a>
+        <div style="text-align:center">
+            <img src="../images/login-pic-2.png" width="250px">
+        </div>
     </div>
-  </div>
 </div>
 
 <div ng-if="token">
-  <div ng-controller="profileController">
-    <div class="setting-forms">
-      <h2>These are your profile settings.</h2>
-      <hr>
+    <div ng-controller="profileController">
+        <div class="setting-forms">
+            <h2>These are your profile settings.</h2>
+            <hr>
 
-      <form class="text-left" ng-controller="profileController" ng-submit="submitEdit()">
+            <form class="text-left" ng-controller="profileController" ng-submit="submitEdit()">
 
-          <div class="editForm">
-            <h4>Please choose which of the following you wish to edit</h4>
+                <div class="editForm">
+                    <h4>Please choose which of the following you wish to edit</h4>
 
-            <div class="form-group">
-              <label for="username">Username</label>
-              <input type="text" name="username" ng-model="edit.username" class="form-control">
-            </div>
+                    <div class="form-group">
+                        <label for="username">Username</label>
+                        <input type="text" name="username" ng-model="edit.username" class="form-control">
+                    </div>
 
-            <div class="form-group">
-              <label for="firstName">First name</label>
-              <input type="text" name="firstName" ng-model="edit.firstName" class="form-control">
-            </div>
+                    <div class="form-group">
+                        <label for="firstName">First name</label>
+                        <input type="text" name="firstName" ng-model="edit.firstName" class="form-control">
+                    </div>
 
-            <div class="form-group">
-              <label for="middleName">Middle name</label>
-              <input type="text" name="middleName" ng-model="edit.middleName" class="form-control">
-            </div>
+                    <div class="form-group">
+                        <label for="middleName">Middle name</label>
+                        <input type="text" name="middleName" ng-model="edit.middleName" class="form-control">
+                    </div>
 
-            <div class="form-group">
-              <label for="lastName">Last name</label>
-              <input type="text" name="lastName" ng-model="edit.lastName" class="form-control">
-            </div>
+                    <div class="form-group">
+                        <label for="lastName">Last name</label>
+                        <input type="text" name="lastName" ng-model="edit.lastName" class="form-control">
+                    </div>
 
-            <div class="form-group">
-              <label for="homeNumber">Home number</label>
-              <input type="text" name="homeNumber" ng-model="edit.homeNumber" class="form-control">
-            </div>
+                    <div class="form-group">
+                        <label for="homeNumber">Home number</label>
+                        <input type="text" name="homeNumber" ng-model="edit.homeNumber" class="form-control">
+                    </div>
 
-            <div class="form-group">
-              <label for="phoneNumber1">Phone number 1</label>
-              <input type="text" name="phoneNumber1" ng-model="edit.phoneNumber1" class="form-control">
-            </div>
+                    <div class="form-group">
+                        <label for="phoneNumber1">Phone number 1</label>
+                        <input type="text" name="phoneNumber1" ng-model="edit.phoneNumber1" class="form-control">
+                    </div>
 
-            <div class="form-group">
-              <label for="phoneNumber2">Phone number 2</label>
-              <input type="text" name="phoneNumber2" ng-model="edit.phoneNumber2" class="form-control">
-            </div>
+                    <div class="form-group">
+                        <label for="phoneNumber2">Phone number 2</label>
+                        <input type="text" name="phoneNumber2" ng-model="edit.phoneNumber2" class="form-control">
+                    </div>
 
-            <div class="form-group">
-              <label for="profilePicture">Upload image</label> <br>
-              <input type="file" name="profilePicture" ng-File-Model="edit.profilePicture" />
-            </div>
+                    <div class="form-group">
+                        <label for="profilePicture">Upload image</label> <br>
+                        <input type="file" name="profilePicture" ng-File-Model="edit.profilePicture" />
+                    </div>
+                    <div ng-if="messageUpload">
+                        {{messageUpload}}
+                    </div>
+                    <button type="submit" class="btn btn-success" id="edit-btn">Edit yourself!</button>
 
-            <button type="submit" class="btn btn-success" id="edit-btn">Edit yourself!</button>
+                </div>
 
-          </div>
+            </form>
 
-      </form>
+            <hr>
 
-      <hr>
+            <form class="text-left" ng-controller="profileController" ng-submit="passChange()">
+                <div class="passForm">
+                    <h4>If you wish to change your password please fill the below textboxes</h4>
 
-      <form class="text-left" ng-controller="profileController" ng-submit="passChange()">
-        <div class="passForm">
-          <h4>If you wish to change your password please fill the below textboxes</h4>
+                    <div class="form-group">
+                        <label for="password">Your current password</label>
+                        <input type="password" name="password" ng-model="password" class="form-control">
+                    </div>
 
-          <div class="form-group">
-            <label for="password">Your current password</label>
-            <input type="password" name="password" ng-model="password" class="form-control">
-          </div>
+                    <div class="form-group">
+                        <label for="verify">Confirm your current password</label>
+                        <input type="password" name="verify" ng-model="verify" class="form-control">
+                    </div>
 
-          <div class="form-group">
-            <label for="verify">Confirm your current password</label>
-            <input type="password" name="verify" ng-model="verify" class="form-control">
-          </div>
+                    <div class="form-group">
+                        <label for="newPassword">Your new password</label>
+                        <input type="password" name="newPassword" ng-model="newPassword" class="form-control">
+                    </div>
 
-          <div class="form-group">
-            <label for="newPassword">Your new password</label>
-            <input type="password" name="newPassword" ng-model="newPassword" class="form-control">
-          </div>
+                    <div class="form-group">
+                        <label for="verNewPassword">Confirm your new password</label>
+                        <input type="password" name="verNewPassword" ng-model="verNewPassword" class="form-control">
+                    </div>
 
-          <div class="form-group">
-            <label for="verNewPassword">Confirm your new password</label>
-            <input type="password" name="verNewPassword" ng-model="verNewPassword" class="form-control">
-          </div>
+                    <button type="submit" class="btn btn-success" id="pass-btn">Change password</button>
 
-          <button type="submit" class="btn btn-success" id="pass-btn">Change password</button>
+                    <div ng-if="messageEmpty">
+                        {{messageEmpty}}
+                    </div>
+                    <div ng-if="messageOld">
+                        {{messageOld}}
+                    </div>
+                    <div ng-if="messageNew">
+                        {{messageNew}}
+                    </div>
+                    <div ng-if="messageError">
+                        {{messageError}}
+                    </div>
 
-          <div ng-if="messageEmpty">
-            {{messageEmpty}}
-          </div>
-          <div ng-if="messageOld">
-            {{messageOld}}
-          </div>
-          <div ng-if="messageNew">
-            {{messageNew}}
-          </div>
-          <div ng-if="messageError">
-            {{messageError}}
-          </div>
+                </div>
+            </form>
+
+            <p id="danger-zone">Danger Zone</p>
+
+            <form class="text-left" ng-controller="profileController" ng-submit="delete()">
+                <div class="delForm">
+                    <h4>Are you leaving us? :(</h4>
+                    <p style="padding-top:0;">Please enter your password to delete your account</p>
+
+                    <div class="form-group">
+                        <label for="password">Your current password</label>
+                        <input type="password" name="password" ng-model="dPassword" class="form-control">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="verify"> Confirm your current password</label>
+                        <input type="password" name="verify" ng-model="dVerify" class="form-control">
+                    </div>
+
+                    <button type="submit" class="btn btn-danger" id="del-btn">Bye bye :(</button>
+
+                    <div ng-if="messagePass">
+                        {{messagePass}}
+                    </div>
+                    <div ng-if="messageNotGiven">
+                        {{messageNotGiven}}
+                    </div>
+
+                </div>
+            </form>
 
         </div>
-      </form>
-
-      <p id="danger-zone">Danger Zone</p>
-
-      <form class="text-left" ng-controller="profileController" ng-submit="delete()">
-        <div class="delForm">
-          <h4>Are you leaving us? :(</h4>
-          <p style="padding-top:0;">Please enter your password to delete your account</p>
-
-          <div class="form-group">
-            <label for="password">Your current password</label>
-            <input type="password" name="password" ng-model="dPassword" class="form-control">
-          </div>
-
-          <div class="form-group">
-            <label for="verify"> Confirm your current password</label>
-            <input type="password" name="verify" ng-model="dVerify" class="form-control">
-          </div>
-
-          <button type="submit" class="btn btn-danger" id="del-btn">Bye bye :(</button>
-
-          <div ng-if="messagePass">
-            {{messagePass}}
-          </div>
-          <div ng-if="messageNotGiven">
-            {{messageNotGiven}}
-          </div>
-
-        </div>
-      </form>
 
     </div>
-
-  </div>
 </div>
