add post date and notes in view more

--- a/public/views/viewMore.html
+++ b/public/views/viewMore.html
@@ -39,6 +39,8 @@
             </div>
 
             <div class="col-md-9" id="right-col">
+                <p><strong>Post date:</strong> {{ date | date : "MMM d, yyyy h:mm a" }}</p>
+
                 <p><strong>Description:</strong> {{description}}</p>
 
                 <hr>
