--- a/public/views/reset.html
+++ b/public/views/reset.html
@@ -2,16 +2,16 @@
 
 <div ng-controller="pass_ctrl" class="container">
 
-	<div ng-if="errorMessage" type = "danger">{{ errorMessage }}</div>
+    <div ng-if="errorMessage" type="danger">{{ errorMessage }}</div>
 
-	<div class="forgetPassword-form">
-		<form action="/" id="pass">
-			<div class="form-group">
-				<label>Enter your new desired password</label>
-				<input type="text" id = "password" ng-model="formData.password" />
-			</div>
-			<button type="button" ng-click="pop()" class="btn btn-primary btn-primary">Change Password</button>
-		</form>
-	</div>
+    <div class="forgetPassword-form">
+        <form action="/" id="pass">
+            <div class="form-group">
+                <label>Enter your new desired password</label>
+                <input type="password" id="password" ng-model="formData.password" />
+            </div>
+            <button type="button" ng-click="pop()" class="btn btn-primary btn-primary">Change Password</button>
+        </form>
+    </div>
 
 </div>
