Edit Profile Styling

--- a/public/css/editProfile.css
+++ b/public/css/editProfile.css
@@ -55,3 +55,8 @@ body {
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
 }
+
+.message{
+  font-weight: bold;
+  color: blue;
+}
