--- a/public/views/starterPage.html
+++ b/public/views/starterPage.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="../css/starterPage.css">
 
-<div class ="content">
+<div id="jumbo"class=" jumbotron container  content"  >
     <h3>Pettts.com</h3>
     <h5>All You Need For Your Pets</h5>
     <hr>
