--- a/public/css/starterPage.css
+++ b/public/css/starterPage.css
@@ -18,20 +18,28 @@ html {
 
 h3 {
     font-family:sans-serif;
-    color: blue;
+    color: darkblue;
     font-size: bold ;
-    font-size: 3em;
+    font-size: 5em;
 }
 
 h5 {
     color: red;
     font-style: italic;
     font-family: sans-serif;
-    font-size: 2em;
+    font-size: 2.5em;
 }
 
 hr {
 
     width: 400px;
     color: aqua;
+}
+
+#jumbo {
+    width: 500px;
+    margin-top: 50px;
+    padding-top: 10%;
+    border-radius: 700px;
+    background-color: rgba(255, 255, 255, 0.5);
 }
