--- a/public/views/pageNotFound.html
+++ b/public/views/pageNotFound.html
@@ -2,11 +2,13 @@
 
 <div class="wrap">
   <div class="logo">
-    <div class="oops">	
-      <p> OOPS! - Could not Find it</p></div>
-			<div class="sub">
+    <div id="jumbo" class="oops jumbotron container">
+      <p> OOPS! - Could not Find it</p>
+      <div class="sub">
         <p><a class="btn btn-success" href="#" role="button"><i class="fa fa-sign-in"></i> Home</a></p>
       </div>
     </div>
-  </div>	
+
+    </div>
+  </div>
 </div>
