Remove Required from edit post

--- a/public/views/addPost.html
+++ b/public/views/addPost.html
@@ -100,6 +100,6 @@
 
         </form>
 
-        <div ng-if="message" type="danger">{{ message }}</div>
+        <div class="message" ng-if="message" type="danger">{{ message }}</div>
     </div>
 </div>
