--- a/public/views/register.html
+++ b/public/views/register.html
@@ -13,22 +13,22 @@
     <form class="text-left" ng-submit="submitUser()">
 
       <div class="form-group">
-        <label for="username">Username</label>
+        <label for="username">Username (Required)</label>
         <input type="text" name="username" ng-model="user.username" placeholder="Username" required class="form-control">
       </div>
 
       <div class="form-group">
-        <label for="password">Password</label>
+        <label for="password">Password (Required)</label>
         <input type="password" name="password" ng-model="user.password" placeholder="Password" required class="form-control">
       </div>
 
       <div class="form-group">
-        <label for="email">Email</label>
+        <label for="email">Email (Required)</label>
         <input type="text" name="email" ng-model="user.email" placeholder="Email" required class="form-control">
       </div>
 
       <div class="form-group">
-        <label for="firstName">First name</label>
+        <label for="firstName">First name (Required)</label>
         <input type="text" name="firstName" ng-model="user.firstName" placeholder="First Name" required class="form-control">
       </div>
 
@@ -38,7 +38,7 @@
       </div>
 
       <div class="form-group">
-        <label for="lastName">Last name</label>
+        <label for="lastName">Last name (Required)</label>
         <input type="text" name="lastName" ng-model="user.lastName" placeholder="Last Name" required class="form-control">
       </div>
 
