--- a/public/views/editPost.html
+++ b/public/views/editPost.html
@@ -23,7 +23,7 @@
                 <hr>
 
                 <div class="form-group">
-                    <label for="type">Post Type (required)</label> <br>
+                    <label for="type">Post Type</label> <br>
                     <input type="radio" name="type" ng-model="post.type" value="sell"> Sell
                     <input type="radio" name="type" ng-model="post.type" value="exchange"> Exchange
                     <input type="radio" name="type" ng-model="post.type" value="mate"> Mate
@@ -33,38 +33,38 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="kind">Animal kind (required)</label>
-                    <input type="text" name="kind" ng-model="post.kind" required placeholder="Animal Kind" class="form-control">
+                    <label for="kind">Animal kind</label>
+                    <input type="text" name="kind" ng-model="post.kind" placeholder="Animal Kind" class="form-control">
                 </div>
 
                 <div class="form-group">
-                    <label for="species">Species (required)</label>
-                    <input type="text" name="species" ng-model="post.species" required placeholder="Animal species" class="form-control">
+                    <label for="species">Species</label>
+                    <input type="text" name="species" ng-model="post.species" placeholder="Animal species" class="form-control">
                 </div>
 
                 <div class="form-group">
-                    <label for="gender">Animal gender (required)</label> <br>
+                    <label for="gender">Animal gender</label> <br>
                     <input type="radio" name="gender" ng-model="post.gender" value="male"> Male
-                    <input type="radio" name="gender" ng-model="post.gender" required value="female"> Female
+                    <input type="radio" name="gender" ng-model="post.gender" value="female"> Female
                 </div>
 
                 <!--check to be visible type exchange only -->
                 <div ng-switch="post.type">
                     <div ng-switch-when="exchange">
                         <div class="form-group">
-                            <label for="kindB"> Other Animal kind (required)</label>
-                            <input type="text" name="kindB" ng-model="post.kindB" required placeholder=" Other Animal Kind" class="form-control">
+                            <label for="kindB"> Other Animal kind</label>
+                            <input type="text" name="kindB" ng-model="post.kindB"placeholder=" Other Animal Kind" class="form-control">
                         </div>
 
                         <div class="form-group">
-                            <label for="speciesB">Other Animal species (required) </label>
-                            <input type="text" name="speciesB" ng-model="post.speciesB" required placeholder="Other Animal species">
+                            <label for="speciesB">Other Animal species </label>
+                            <input type="text" name="speciesB" ng-model="post.speciesB"placeholder="Other Animal species">
                         </div>
 
                         <div class="form-group">
-                            <label for="genderB">Other Animal gender (required)</label> <br>
+                            <label for="genderB">Other Animal gender</label> <br>
                             <input type="radio" name="genderB" ng-model="post.genderB" value="male"> Male
-                            <input type="radio" name="genderB" ng-model="post.genderB" required value="female"> Female
+                            <input type="radio" name="genderB" ng-model="post.genderB" value="female"> Female
                         </div>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
 
         </form>
 
-        <div ng-if="message" type="danger">{{ message }}</div>
+        <div class="message" ng-if="message" type="danger">{{ message }}</div>
         </div>
     </div>
 </div>
