--- a/public/views/editPost.html
+++ b/public/views/editPost.html
@@ -53,18 +53,18 @@
                     <div ng-switch-when="exchange">
                         <div class="form-group">
                             <label for="kindB"> Other Animal kind</label>
-                            <input type="text" name="kindB" ng-model="post.kindB"placeholder=" Other Animal Kind" class="form-control">
+                            <input type="text" name="kindB" required ng-model="post.kindB" placeholder=" Other Animal Kind" class="form-control">
                         </div>
 
                         <div class="form-group">
-                            <label for="speciesB">Other Animal species </label>
-                            <input type="text" name="speciesB" ng-model="post.speciesB"placeholder="Other Animal species">
+                            <label for="speciesB">Other Animal species </label> <br>
+                            <input type="text" name="speciesB" required ng-model="post.speciesB" placeholder="Other Animal species">
                         </div>
 
                         <div class="form-group">
                             <label for="genderB">Other Animal gender</label> <br>
                             <input type="radio" name="genderB" ng-model="post.genderB" value="male"> Male
-                            <input type="radio" name="genderB" ng-model="post.genderB" value="female"> Female
+                            <input type="radio" name="genderB" required ng-model="post.genderB" value="female"> Female
                         </div>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                     <div ng-switch-when="sell">
                         <div class="form-group">
                             <label for="price">price (required)</label>
-                            <input type="number" min="1" name="price" ng-model="post.price" required placeholder="price" class="form-control" />
+                            <input type="number" min="1" name="price" required ng-model="post.price" required placeholder="price" class="form-control" />
                         </div>
                     </div>
                 </div>
