--- a/public/views/editPost.html
+++ b/public/views/editPost.html
@@ -16,7 +16,7 @@
 </div>
 
 <div ng-if="token">
-    <div ng-controller="postController" class="container add-edit-post-form">
+    <div ng-controller="addEditPostCtrl" class="container add-edit-post-form">
         <form ng-submit="submitEdit()" enctype="multipart/form-data">
             <div class="form-group">
                 <h3>Edit post</h3>
