--- a/public/views/forgotPassword.html
+++ b/public/views/forgotPassword.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="../css/forgetPassword.css">
 
-<div ng-controller="pass_ctrl" class="container forgetPassword-form">
+<div ng-controller="passCtrl" class="container forgetPassword-form">
 	<form action="/" id="pass">
 		<div class="form-group">
 			<label>Please enter your email</label>
