--- a/public/views/register.html
+++ b/public/views/register.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="../css/register.css">
 
-<div class="register-outer"  ng-controller="registerController">
+<div class="register-outer"  ng-controller="registerCtrl">
 
 
   <div class="registerForm">
