--- a/public/views/reset.html
+++ b/public/views/reset.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="../css/forgetPassword.css">
 
-<div ng-controller="pass_ctrl" class="container">
+<div ng-controller="passCtrl" class="container">
 
     <div ng-if="errorMessage" type="danger">{{ errorMessage }}</div>
 
