--- a/public/views/search.html
+++ b/public/views/search.html
@@ -1,4 +1,4 @@
-<div class="main" ng-controller="searchController">
+<div class="main" ng-controller="searchCtrl">
 
     <!-- if no posts are found -->
     <!--  -->
@@ -33,7 +33,7 @@
                             <!-- fixing description length to display by 250 chars -->
                             <p>{{ post.description.slice(0,250) }}...</p>
                             <!-- link to show post page -->
-                            <div ng-controller="viewMoreDirectionController" ng-click="submitViewMore()">
+                            <div ng-controller="viewMoreDirectionCtrl" ng-click="submitViewMore()">
                                 <button type="button" class="btn btn-primary" id="edit-btn">View more</button>
                             </div>
                         </div>
