--- a/public/views/charge.html
+++ b/public/views/charge.html
@@ -2,12 +2,12 @@
 
 <div class="wrap">
   <div class="logo">
-    <div class="oops">	
+    <div class="oops">
       <p>Your Payment is Done Successfully, Enjoy Advertising with us</p>
     </div>
 		<hr>
     <div class="sub">
-      <p><a class="btn btn-success" href="#" role="button"><i class="fa fa-sign-in"></i> Home</a></p>
+      <p><a class="btn btn-success" href="/" role="button"><i class="fa fa-sign-in"></i> Home</a></p>
 		</div>
   </div>
 </div>
