--- a/public/views/posts.html
+++ b/public/views/posts.html
@@ -22,10 +22,10 @@
                             <!-- post image -->
                             <a href="#">
                                 <div ng-if="post.image">
-                                    <img class="media-object" src="{{post.image.substring(7,post.image.length)}}" width="150px" alt="...">
+                                    <img class="media-object" src="{{post.image.substring(7,post.image.length)}}" width="150px" alt="{{ post.type | stringifyType }} post image">
                                 </div>
                                 <div ng-if="!post.image">
-                                    <img class="media-object" src="http://placehold.it/150x150" alt="...">
+                                    <img class="media-object" src="http://placehold.it/150x150" alt="No image available">
                                 </div>
                             </a>
                         </div>
@@ -37,7 +37,7 @@
                             <!-- fixing description length to display by 250 chars -->
                             <p>{{ post.description.slice(0,250) }}...</p>
                             <!-- link to show post page -->
-                            <a href="#" class="btn btn-primary" ng-click="submitViewMore()">View more</a>
+                            <button class="btn btn-primary" data-toggle="modal" data-target="#myModal">View more</button>
                         </div>
                         <!-- End of media-body -->
                     </div>
@@ -49,6 +49,38 @@
         </div>
         <!-- End of row -->
 
+        <div id="myModal" class="modal fade">
+          <div class="modal-dialog">
+            <!-- if the user is not logged in, don't allow him to view more the post -->
+            <div class="modal-content" ng-if="!token">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4>We are sorry, you must be logged in to view it more</h4>
+              </div>
+              <div class="modal-body">
+                <p>Get back to your account</p>
+                <a class="btn btn-success btn-block" href="/login">Login now</a>
+
+                <div class="strike">
+                   <span>or</span>
+                </div>
+
+                <p>Perhaps you don't have an account?</p>
+                <a class="btn btn-primary btn-block" href="/register">Register now, It's free!</a>
+
+                <div style="text-align:center; margin-top:1.75em;">
+                    <img src="../images/login-pic-2.png" width="250px">
+                </div>
+
+              </div>
+            </div>
+            <!-- End of !token div -->
+
+            <!-- if the user is logged in, allow him to view more the post -->
+
+          </div>
+        </div>
+
         <ul uib-pagination boundary-links="true" total-items="posts.length" items-per-page="pageSize" ng-model="currentPage" max-size="maxSize" class="pagination-md pagination" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;">
         </ul>
 
@@ -57,3 +89,40 @@
 
 </div>
 <!-- End of main -->
+
+<style media="screen">
+    .strike {
+      display: block;
+      text-align: center;
+      overflow: hidden;
+      white-space: nowrap;
+      margin-top: 1.5em;
+      margin-bottom: 1.5em;
+  }
+
+  .strike > span {
+      position: relative;
+      display: inline-block;
+      color: rgb(94, 94, 94);
+  }
+
+  .strike > span:before,
+  .strike > span:after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      width: 9999px;
+      height: 1px;
+      background: rgb(226, 226, 226);
+  }
+
+  .strike > span:before {
+      right: 100%;
+      margin-right: 15px;
+  }
+
+  .strike > span:after {
+      left: 100%;
+      margin-left: 15px;
+  }
+</style>
