--- a/public/views/viewMore.html
+++ b/public/views/viewMore.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="../css/viewMore.css">
 
 <!-- Modals shown upon view more clicked -->
-<div id="myModal" class="modal fade">
+<div id="myModal-{{ post._id }}" class="modal fade">
   <!-- if the user is not logged in, don't allow him to view more the post -->
   <div class="modal-dialog" ng-if="!token">
     <div class="modal-content">
@@ -48,9 +48,10 @@
             <div class="row">
 
                 <div class="col-md-3">
-                    <img ng-src="{{ post.image.substring(7,post.image.length) }}" alt="No Image Available for this Post" class="img-responsive img-thumbnail">
-                    <p id="email-info">
-                      <label><strong>Contact email:</strong> {{post.ownerEmail}}</label>
+                    <img ng-if="post.image" ng-src="{{ post.image.substring(7,post.image.length) }}" alt="{{ post.type | stringifyType }} post image" class="img-responsive img-thumbnail">
+                    <img ng-if="!post.image" src="http://placehold.it/200x200" alt="No image available" class="img-responsive img-thumbnail">
+                    <p id="email-info" style="word-wrap: break-word;">
+                      <label><strong>Contact email:</strong></label> {{post.ownerEmail}}
                     </p>
 
                     <!-- up & down vote form -->
@@ -61,7 +62,7 @@
                         <label class="radio-inline">
                           <input type="radio" value="down" ng-model="vote">Down-vote
                         </label>
-                        <button type="submit" id="vote-btn" class="btn btn-success">Vote</button>
+                        <button type="submit" id="vote-btn" class="btn btn-success btn-block">Vote</button>
                         <div>{{message}}</div>
                     </form>
 
@@ -82,24 +83,28 @@
                     <p><strong>Gender:</strong> {{post.gender}}</p>
 
                     <div ng-if="sell">
-                        <p><strong>Price:</strong> {{price}}</p>
+                        <p><strong>Price:</strong> {{post.price}}</p>
                     </div>
 
                     <div ng-if="exchange">
-                        <p><strong>SpeciesB : {{speciesB}}</strong></p>
-                        <p><strong>KindB : {{kindB}}</strong></p>
-                        <p><strong>GenderB : {{genderB}}</strong></p>
+                        <p><strong>SpeciesB : {{post.speciesB}}</strong></p>
+                        <p><strong>KindB : {{post.kindB}}</strong></p>
+                        <p><strong>GenderB : {{post.genderB}}</strong></p>
                     </div>
 
-                    <hr>
                     <div ng-if="note">
-                        <p><strong>notes about the post:</strong> {{note}}</p>
+                        <hr>
+                        <p><strong>notes about the post:</strong> {{post.note}}</p>
                     </div>
                 </div>
             </div>
         </div>
 
       </div> <!--  End of modal-body -->
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
 
     </div> <!--  End of modal-content -->
 
