--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -65,7 +65,10 @@
                                 <div class="modal-dialog modal-lg" ng-if="token">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            My Inbox
+                                            <h2>My Inbox</h2>
+                                        </div>
+                                        <div class="modal-body" ng-repeat="x in [1,2,3]">
+                                            messgae:{{x}}
                                         </div>
                                     </div>
                                 </div>
